# FEUP-CAL-PROJ

./: PrimeiraParte.docx  README.md
Parte I/: PrimeiraParte.docx  ~$imeiraParte.docx
Parte II/: README.txt
Parte II/TourMateApp/: CMakeLists.txt  FichaJUNG.cpp  main.cpp
Parte II/TourMateApp/Algorithms/: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BidirDijkstra.cpp  BidirDijkstra.h  DFS.cpp  DFS.h  Dijkstra.cpp  Dijkstra.h
Parte II/TourMateApp/ClientInteraction/: ClientInfo.cpp  ClientInfo.h  GeneratePathMenu.cpp  GeneratePathMenu.h  interestManager.cpp  interestManager.h  menu.cpp  menu.h  menu2.cpp  menu2.h
Parte II/TourMateApp/Graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Stop.h  Vertex.cpp  Vertex.h
Parte II/TourMateApp/Utils/: GraphView.cpp  GraphView.h  MagicGenerator.cpp  MagicGenerator.h  ReadFiles.cpp  ReadFiles.h  util.cpp  util.h
Parte II/TourMateApp/lib/: Graph.h
Parte II/TourMateApp/resources/: distancesOriented.txt  tags.txt
Parte II/TourMateApp/resources/GridGraphs/4x4/: edges.txt  nodes.txt
Parte II/TourMateApp/resources/GridGraphs/8x8/: edges.txt
Parte II/TourMateApp/resources/PortugalMaps/PortugalMaps/Porto/: nodes_lat_lon_porto.txt
Parte II/TourMateApp/resources/TagExamples/STCPRoutes/: metro_routes_porto.txt
Parte II/TourMateApp2.0/: CMakeLists.txt  main.cpp
Parte II/TourMateApp2.0/Graph/: Graph.cpp  Graph.h  MutablePriorityQueue.h
Parte II/TourMateApp2.0/POIGraph/: POIGraph.h
Parte II/TourMateApp2.0/Resources/: tags.txt
Parte II/TourMateApp2.0/UserInteraction/: AlgorithmAnalysis.cpp  (+9 more)
Parte II/doc/: ~$L1920_TURMA3_GRUPO8.docx
(+10 files in other folders)
